--- a/VibeZMVC/VibeZMVC.csproj
+++ b/VibeZMVC/VibeZMVC.csproj
@@ -11,6 +11,10 @@
     <ProjectReference Include="..\Repository\Repositories.csproj" />
     <ProjectReference Include="..\VibeZDTO\VibeZDTO.csproj" />
     <ProjectReference Include="..\VibeZOData\VibeZOData.csproj" />
+    <Content Update="Views\Dashboards\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
 	  <None Update="appsettings.Development.json">
 		  <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </None>
