--- a/.github/workflows/main_vibezweb.yml
+++ b/.github/workflows/main_vibezweb.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'VibeZMVC/**'  # Only trigger on changes to the MVC project
   workflow_dispatch:
 
 jobs:
