--- a/.github/workflows/main_vibezweb.yml
+++ b/.github/workflows/main_vibezweb.yml
@@ -24,10 +24,13 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build VibeZWeb/VibeZMVC/VibeZMVC.csproj --configuration Release
+        run: dotnet build ./VibeZMVC/VibeZMVC.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish VibeZWeb/VibeZMVC/VibeZMVC.csproj -c Release --no-dependencies -o ${{env.DOTNET_ROOT}}/myapp # Specify your MVC project path
+        run: dotnet publish ./VibeZMVC/VibeZMVC.csproj -c Release --no-dependencies -o ${{env.DOTNET_ROOT}}/myapp # Specify your MVC project path
+
+      - name: List all files
+        run: ls -R
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
