--- a/.github/workflows/main_vibezweb.yml
+++ b/.github/workflows/main_vibezweb.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - '**'     # Only trigger on changes to the MVC project
+      - 'VibeZMVC/**'     # Only trigger on changes to the MVC project
   workflow_dispatch:
 
 jobs:
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build ./VibeZMVC/VibeZMVC.csproj --configuration Release
+        run: dotnet build VibeZWeb/VibeZMVC/VibeZMVC.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./VibeZMVC/VibeZMVC.csproj -c Release --no-dependencies -o ${{env.DOTNET_ROOT}}/myapp # Specify your MVC project path
+        run: dotnet publish VibeZWeb/VibeZMVC/VibeZMVC.csproj -c Release --no-dependencies -o ${{env.DOTNET_ROOT}}/myapp # Specify your MVC project path
 
       - name: List all files
         run: ls -R
