--- a/.github/workflows/main_vibezweb.yml
+++ b/.github/workflows/main_vibezweb.yml
@@ -24,13 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build VibeZWeb/VibeZMVC/VibeZMVC.csproj --configuration Release
+        run: dotnet build VibeZMVC --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish VibeZWeb/VibeZMVC/VibeZMVC.csproj -c Release --no-dependencies -o ${{env.DOTNET_ROOT}}/myapp # Specify your MVC project path
-
-      - name: List all files
-        run: ls -R
+        run: dotnet publish VibeZMVC -c Release --no-dependencies -o ${{env.DOTNET_ROOT}}/myapp # Specify your MVC project path
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
