--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 *.vsidx
+.vs/VibeZ/CopilotIndices/0.2.1653.9816/CodeChunks.db
+.vs/VibeZ/CopilotIndices/0.2.1653.9816/CodeChunks.db
+.vs/VibeZ/CopilotIndices/0.2.1653.9816/CodeChunks.db-shm
+.vs/VibeZ/CopilotIndices/0.2.1653.9816/CodeChunks.db-wal
