--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mapbox/node-pre-gyp": "^1.0.11",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
