--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/node-pre-gyp": "^1.0.11",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
