--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/node-pre-gyp": "^1.0.11",
+    "@react-oauth/google": "^0.12.1",
+    "antd": "^5.21.5",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "eventemitter3": "^5.0.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "qs": "^6.13.0",
     "queue-fifo": "^0.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
