--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@react-oauth/google": "^0.12.1",
+    "antd": "^5.21.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
+    "npm": "^10.9.0",
     "qs": "^6.13.0",
     "queue-fifo": "^0.2.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
