--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.1.0",
+    "@ant-design/cssinjs": "^1.21.1",
     "@ant-design/icons": "^5.5.1",
-    "@ant-design/icons": "^5.5.1",
+    "@babel/runtime": "^7.26.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/node-pre-gyp": "^1.0.11",
@@ -19,6 +22,9 @@
     "antd": "^5.21.5",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
+    "classnames": "^2.5.1",
+    "copy-to-clipboard": "^3.3.3",
     "eventemitter3": "^5.0.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -26,13 +32,23 @@
     "npm": "^10.9.0",
     "qs": "^6.13.0",
     "queue-fifo": "^0.2.6",
+    "rc-cascader": "^3.30.0",
+    "rc-collapse": "^3.9.0",
+    "rc-motion": "^2.9.3",
+    "rc-progress": "^4.0.0",
+    "rc-slider": "^11.1.7",
+    "rc-table": "^7.48.1",
+    "rc-tooltip": "^6.2.1",
+    "rc-tree": "^5.10.1",
+    "rc-util": "^5.43.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "scroll-into-view-if-needed": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
