--- a/VibeZOData/VibeZOData.csproj
+++ b/VibeZOData/VibeZOData.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
     <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
     <PackageReference Include="MailKit" Version="4.8.0" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -32,6 +33,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Polly.Extensions" Version="8.4.2" />
