--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
     "eventemitter3": "^5.0.1",
+    "extract-colors": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
